deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wonder-web
  namespace: coder
spec:
  selector:
    app: wonder-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
